--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>A whale of a greeting</title>
 </head>
 <body>
 <h1>hello, world</h1>
 <p>call me Ishmael</p>
+<img src="images/breaching_whale.jpg" alt="Hval!"/>
 </body>
 </html>
